--- a/README.rdoc
+++ b/README.rdoc
@@ -88,6 +88,24 @@ Git Init
 view_devise_registrations_new.html
 
 
+
+
+
+. Set your remote URL to a form that supports SSH 1
+If you have done the steps above and are still getting the password prompt, make sure your repo URL is in the form
+
+git+ssh://git@github.com/username/reponame.git
+as opposed to
+
+https://github.com/username/reponame.git
+To see your repo URL, run:
+
+git remote show origin
+You can change the URL with:
+
+git remote set-url origin git+ssh://git@github.com/username/reponame.git
+
+
 Phase 3.0 Making Custom Css interact with framework
 
 
