--- a/README.rdoc
+++ b/README.rdoc
@@ -238,3 +238,19 @@ ruby app.rb -p $PORT -o $IP'.
 
 
 testing git push
+
+<configuration>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="HTTP/S to HTTPS Redirect" enabled="true" stopProcessing="true">
+        <match url="(.*)" />
+        <conditions logicalGrouping="MatchAny">
+          <add input="{SERVER_PORT_SECURE}" pattern="^0$" />
+        </conditions>
+        <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
+</configuration>
